# ChangeLog for app-office/ganttproject
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/ganttproject/ChangeLog,v 1.7 2004/11/03 11:51:47 axxo Exp $

  03 Nov 2004; Thomas Matthijs <axxo@gentoo.org> ganttproject-1.10.1.ebuild,
  ganttproject-1.9.11-r1.ebuild, ganttproject-1.9.11.ebuild:
  depend on app-arch/unzip

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> ganttproject-1.10.1.ebuild,
  ganttproject-1.9.11-r1.ebuild, ganttproject-1.9.11.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

*ganttproject-1.10.1 (12 Oct 2004)

  12 Oct 2004; Thomas Matthijs <axxo@gentoo.org>
  +files/1.10.1-ganttproject.desktop, +ganttproject-1.10.1.ebuild:
  version bump

*ganttproject-1.9.11-r1 (16 Sep 2004)

  16 Sep 2004; Thomas Matthijs <axxo@gentoo.org>
  +ganttproject-1.9.11-r1.ebuild:
  fix wrapper script, bug 64041

  26 Aug 2004; Chris Aniszczyk <zx@gentoo.org> files/build.xml.patch,
  ganttproject-1.9.11.ebuild:
  Closes #61513

  23 Aug 2004; Chris Aniszczyk <zx@gentoo.org> ganttproject-1.9.11.ebuild:
  inherit eutils

*ganttproject-1.9.11 (04 Aug 2004)

  04 Aug 2004; Karl Trygve Kalleberg <karltk@gentoo.org>
  ganttproject-1.9.11.ebuild: Initial import.  Ebuild submitted by Lars Trieloff
  <lars@trieloff.net>. Fixes #56358.