@@ -1,6 +1,10 @@
 # ChangeLog for app-office/ganttproject
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/ganttproject/ChangeLog,v 1.7 2004/11/03 11:51:47 axxo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/ganttproject/ChangeLog,v 1.8 2004/11/29 16:23:38 axxo Exp $
+
+  29 Nov 2004; Thomas Matthijs <axxo@gentoo.org> ganttproject-1.10.1.ebuild,
+  ganttproject-1.9.11-r1.ebuild, ganttproject-1.9.11.ebuild:
+  $@ -> "$@" #70651
 
   03 Nov 2004; Thomas Matthijs <axxo@gentoo.org> ganttproject-1.10.1.ebuild,
   ganttproject-1.9.11-r1.ebuild, ganttproject-1.9.11.ebuild:
